--- a/线性回归.md
+++ b/线性回归.md
@@ -1,3 +1,15 @@
-# First Chapter
+# 线性回归
+## 引子
+先看一个问题：
+假定我们现有一大批数据，包含房屋的面积信息及对应该面积的房价的信息，如果我们能得到房屋面积与房屋价格间的关系，那么，当给定一个房屋时，我们只要知道其面积，就能大致推测出其价格了。
 
-GitBook allows you to organize your book into chapters, each chapter is stored in a separate file like this one.
+上面的问题还可以被转义如下：
+> “OK，我具备了很多关于房屋面积及其对应售价的知识（数据），再通过一定的学习，当面对新的房屋面积时，我不再对其定价感到束手无策”。
+
+通常，这类预测问题可以用__回归模型（regression）__进行解决，回归模型定义了__输入__与__输出__的关系，输入即现有知识，而输出则为预测。
+
+上面的问题在回归模型下的解决步骤为：
+
+1. 积累知识
+
+
