--- a/线性回归.md
+++ b/线性回归.md
@@ -1,4 +1,4 @@
-# 线性回归
+#ng 线性# 线性jia 线性# 线性jian线性 线性# 线性jia 线性# 线性jiang归
 ## 引子
 先看一个问题：
 假定我们现有一大批数据，包含房屋的面积信息及对应该面积的房价的信息，如果我们能得到房屋面积与房屋价格间的关系，那么，当给定一个房屋时，我们只要知道其面积，就能大致推测出其价格了。
@@ -10,6 +10,6 @@
 
 上面的问题在回归模型下的解决步骤为：
 
-1. 积累知识
+1. 积累知识： w
 
 
