--- a/线性回归.md
+++ b/线性回归.md
@@ -1,4 +1,4 @@
-#ng 线性# 线性jia 线性# 线性jian线性 线性# 线性jia 线性# 线性jiang归
+# 线性回归
 ## 引子
 先看一个问题：
 假定我们现有一大批数据，包含房屋的面积信息及对应该面积的房价的信息，如果我们能得到房屋面积与房屋价格间的关系，那么，当给定一个房屋时，我们只要知道其面积，就能大致推测出其价格了。
@@ -8,8 +8,18 @@
 
 通常，这类预测问题可以用__回归模型（regression）__进行解决，回归模型定义了__输入__与__输出__的关系，输入即现有知识，而输出则为预测。
 
-上面的问题在回归模型下的解决步骤为：
+一个预测问题在回归模型下的解决步骤为：
 
-1. 积累知识： w
+1. 积累知识： 我们将储备的知识称之为*训练集Training Set*，很好理解，知识能够训练人进步
+2. 学习：学习如何预测，得到输入与输出的关系。在学习阶段，应当有合适的指导方针，江山不能仅凭热血就攻下。在这里，合适的指导方针我们称之为*Learning Algorithm*
+3. 预测：学习完成后，当接受了新的数据（输入）后，我们就能通过学习阶段获得的*对应关系*来预测输出。
+
+学习过程往往是艰苦的，“人谁无过，过而能改，善莫大焉”，因此对我们有这两点要求：
+- 有__手段__能评估我们的学习正确性
+- 当学习效果不佳时，有__手段__能纠正我们的学习策略
+
+## 线性回归
+首先，我们明确几个常用的数学符号：
+- 特征（feature）：$ x_i $， 比如，房屋的面积，卧室数量都算房屋的特征
 
 
