--- a/线性回归.md
+++ b/线性回归.md
@@ -42,7 +42,7 @@ J(\theta)=\frac{1}{2m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y_i]^2 \quad {m为
 $$
 误差评估的函数在机器学习中也称为__代价函数（cost function）__。
 
-### 调优
+### 调优：批量梯度下降
 在引入了代价函数后，解决了“有手段评估学习的正确性”的问题，下面我们开始解决“当学习效果不佳时，有手段能纠正我们的学习策略”的问题。
 
 首先可以明确的是，该手段就是要反复调节$$\theta$$是的预测$$J(\theta)$$足够小，以及使得预测精度足够高，在线性回归中，通常使用*梯度下降（Gradient Descent）*来调节$$\theta$$：
@@ -72,3 +72,13 @@ J(\theta)=\frac{1}{2m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y_i]^2
 $$
 我们称该过程为__基于最小均方（LMS）的批量梯度下降法（Batch Gradient Descent）__，该方法虽然可以收敛（即总能达到最小值），但是每调节一个$$\theta_j$$，都不得不迭代一遍样本集，如果样本的体积$$m$$很大，这样做无疑开销巨大。
 
+### 调优：随机梯度下降
+鉴于__批量梯度下降__的性能问题，又引入了__随机梯度下降（Stochastic Gradient Descent）__：
+$$
+
+\mbox{重复直到收敛（Repeat until convergence）:}
+\\ \mbox{for }i=1 \mbox{ to } m:
+\\ \theta_j = \theta_j+\alpha[y_i-h_\theta(x^{(i)})]x_j^{(i)}
+$$
+
+可以看到
