--- a/线性回归.md
+++ b/线性回归.md
@@ -81,4 +81,9 @@ $$
 \\ \theta_j = \theta_j+\alpha[y_i-h_\theta(x^{(i)})]x_j^{(i)}
 $$
 
-可以看到
+可以看到，在随机梯度下降法中，每次更新$$\theta_j$$只需要一个样本：$$(x^{(i)}, y_i)$$。即便在样本集容量巨大时，我们也很可能迅速获得最优解，SGD在性能上的优势明显。
+
+|手段|特点|
+|----|----|
+|批量梯度下降法|尽可能减小训练样本的__总的__预测代价，能够获得最小值，即最高的预测精度|
+|随机梯度下降法|尽可能的减小每个训练样本的预测代价，虽然并非从全局着眼，但是这种每个样本的最小化过程通常也能使得最终的预测精度足够高|
