--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -197,12 +197,12 @@ if __name__ == "__main__":
 ```
 
 __拟合状况__：
-![bgd](./attachments/bgd.png)
+![bgd](../attachments/bgd.png)
 
 可以看到，bgd运行的并不慢，这是因为在regression程序中，我们采用了__向量形式__计算$$\theta$$，计算机会通过__并行计算__的手段来优化速度。
 
 __误差随迭代次数的关系__：
-![bgd_errors](./attachments/bgd_errors.png)
+![bgd_errors](../attachments/bgd_errors.png)
 
 ### sgd测试
 ```python
@@ -255,8 +255,8 @@ if __name__ == "__main__":
 ```
 
 __拟合状况__：
-![sgd](./attachments/sgd.png)
+![sgd](../attachments/sgd.png)
 
 __误差随迭代次数的关系__：
-![sgd_errors](./attachments/sgd_errors.png)
+![sgd_errors](../attachments/sgd_errors.png)
 在学习率为$$0.01$$时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本数据足够小，二是其自身很难通过并行计算去优化速度。
