--- a/线性回归/articles/多项式回归.md
+++ b/线性回归/articles/多项式回归.md
@@ -1,5 +1,4 @@
 # 多项式回归
-## 引子
 在上节的[回归问题](https://yoyoyohamapi.gitbooks.io/mit-ml/content/%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92/%E5%9B%9E%E5%BD%92%E9%97%AE%E9%A2%98/article.html)中，我们通过如下函数来预测对应房屋面积的房价：
 $$
 
@@ -7,7 +6,7 @@ h_\theta(x)=\theta_0+\theta_1*size
 
 $$
 
-通过程序我们也知道，该函数得到的是直线拟合，精度欠佳。现在，我们可以考虑对房价特征$$size$$进行平方，以及获得更加精准的$$size$$变化（现在，面积特征变为了面积平方特征）：
+通过程序我们也知道，该函数得到的是直线拟合，精度欠佳。现在，我们可以考虑对房价特征$$size$$进行平方，以及获得更加精准的$$size$$变化：
 $$
 
 h_\theta(x) = \theta_0+\theta_1*size+\theta_2*size^2
@@ -17,7 +16,7 @@ $$
 
 如下图所示，多项式回归得到了更好的拟合曲线，但我们也发现，在房屋面积足够大时，曲线反而出现了下沿，这意味着房价反而随着在房屋面积足够大时，与面积成反比，这明显不符合可观规律（虽然我们很渴望这样的情况出现）：
 
-![多项式回归](./attachments/polynomial.png)
+![多项式回归](../attachments/polynomial.png)
 
 故而，进一步地，我们考虑加上三次方项目或者替换二次方项为开方，得到如下两种预测：
 $$
@@ -32,8 +31,8 @@ $$
 
 > 在该例中，因为三次方项会带来很大的值，所以优先考虑采用了开方的预测函数。
 
-## 特征缩放（归一化）
-注意，多项式回归的幂运算会使得新的特征的取值过大，从而造成各个特征间的差异过大，例如，我们的房价$$size\in [1,1000]$$，那么$$\sqrt{size} \in [1,\sqrt{1000}]$$。为了个特征在预测过程中被同等看待，就要进行__*特征缩放（feature scaling）*__，将各个特征缩放到$$[0,1]$$中，即归一化处理。这样，我们就用了__比重__来衡量特征，而非数值。
+## 特征缩放（Feature Scaling）
+注意，多项式回归的幂运算会使得新的特征的取值过大，从而造成各个特征间的差异过大，例如，我们的房价$$size\in [1,1000]$$，那么$$\sqrt{size} \in [1,\sqrt{1000}]$$。为了个特征在预测过程中被尽可能同等看待，就要进行__*特征缩放（feature scaling）*__，。
 
 假定我们对房屋的预测模型如下：
 $$
