--- a/线性回归/articles/特征缩放.md
+++ b/线性回归/articles/特征缩放.md
@@ -40,6 +40,9 @@ $$
 
 大多数机器学习算法中，会选择Standardization来进行特征缩放，但是，Min-Max Scaling也并非会被弃置一地。在数字图像处理中，像素强度通常就会被量化到$$[0,1]$$区间，在一般的神经网络算法中，也会要求特征被量化到$$[0,1]$$区间。
 
+进行了特征缩放以后，代价函数的轮廓会是“偏圆”的，梯度下降过程更加笔直，性能因此也得到提升：
+
+![缩放了特征的代价函数](../attachments/缩放了特征的代价函数.png)
 
 ## 参考文献
 - [About Feature Scaling and Normalization](http://sebastianraschka.com/Articles/2014_about_feature_scaling.html#numpy)
