--- a/线性回归/articles/特征缩放.md
+++ b/线性回归/articles/特征缩放.md
@@ -46,3 +46,4 @@ $$
 
 ## 参考文献
 - [About Feature Scaling and Normalization](http://sebastianraschka.com/Articles/2014_about_feature_scaling.html#numpy)
+- [Wiki--Feature scaling](https://en.wikipedia.org/wiki/Feature_scaling)
