--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -81,7 +81,7 @@ def bgd(rate, maxLoop, epsilon, X, y):
         y: 标签矩阵
 
     Returns:
-        (theta, error, iterationCount), timeConsumed
+        (theta, errors, thetas), timeConsumed
     """
     m,n = X.shape
     # 初始化theta
@@ -90,6 +90,9 @@ def bgd(rate, maxLoop, epsilon, X, y):
     converged = False
     error = float('inf')
     errors = []
+    thetas = {}
+    for j in range(n):
+        thetas[j] = [theta[j,0]]
     while count<=maxLoop:
         if(converged):
             break
@@ -97,12 +100,13 @@ def bgd(rate, maxLoop, epsilon, X, y):
         for j in range(n):
             deriv = (y-X*theta).T*X[:, j]/m
             theta[j,0] = theta[j,0]+rate*deriv
+            thetas[j].append(theta[j,0])
         error = J(theta, X, y)
         errors.append(error[0,0])
         # 如果已经收敛
         if(error < epsilon):
             converged = True
-    return theta,errors
+    return theta,errors,thetas
 
 @exeTime
 def sgd(rate, maxLoop, epsilon, X, y):
@@ -114,7 +118,7 @@ def sgd(rate, maxLoop, epsilon, X, y):
         X: 样本矩阵
         y: 标签矩阵
     Returns:
-        (theta, error, iterationCount), timeConsumed
+        (theta, error, thetas), timeConsumed
     """
     m,n = X.shape
     # 初始化theta
@@ -123,6 +127,9 @@ def sgd(rate, maxLoop, epsilon, X, y):
     converged = False
     error = float('inf')
     errors = []
+    thetas = {}
+    for j in range(n):
+        thetas[j] = [theta[j,0]]
     while count <= maxLoop:
         if(converged):
             break
@@ -134,12 +141,51 @@ def sgd(rate, maxLoop, epsilon, X, y):
             diff = y[i,0]-h(theta, X[i].T)
             for j in range(n):
                 theta[j,0] = theta[j,0] + rate*diff*X[i, j]
+                thetas[j].append(theta[j,0])
             error = J(theta, X, y)
             errors[-1] = error[0,0]
             # 如果已经收敛
             if(error < epsilon):
                 converged = True
-    return theta, errors
+    return theta, errors, thetas
+
+def standardize(X):
+    """特征标准化处理
+
+    Args:
+        X: 样本集
+    Returns:
+        标准后的样本集
+    """
+    m, n = X.shape
+    # 归一化每一个特征
+    for j in range(n):
+        features = X[:,j]
+        meanVal = features.mean(axis=0)
+        std = features.std(axis=0)
+        if std != 0:
+            X[:, j] = (features-meanVal)/std
+    return X
+
+def normalize(X):
+    """特征归一化处理
+
+    Args:
+        X: 样本集
+    Returns:
+        归一化后的样本集
+    """
+    m, n = X.shape
+    # 归一化每一个特征
+    for j in range(n):
+        features = X[:,j]
+        minVal = features.min(axis=0)
+        maxVal = features.max(axis=0)
+        if minVal < 0:
+           X[:,j] = (features-minVal)/(maxVal-minVal)
+        else:
+           X[:,j] = features/maxVal
+    return X
 ```
 
 > 代码结合注释应该能看懂，借助于Numpy，只是复现了课上的公式。
@@ -208,6 +254,8 @@ __误差随迭代次数的关系__：
 ```python
 # coding: utf-8
 import regression
+from matplotlib import cm
+from mpl_toolkits.mplot3d import axes3d
 import matplotlib.pyplot as plt
 import matplotlib.ticker as mtick
 import numpy as np
@@ -218,16 +266,17 @@ if __name__ == "__main__":
     m,n = X.shape
     X = np.concatenate((np.ones((m,1)), X), axis=1)
 
-    rate = 0.001
-    maxLoop = 1000
-    epsilon = 1
+    rate = 0.01
+    maxLoop = 100
+    epsilon =0.01
 
     result, timeConsumed = regression.sgd(rate, maxLoop, epsilon, X, y)
-    theta,errors = result
 
-    # 打印拟合曲线
+    theta, errors, thetas = result
+
+    # 绘制拟合曲线
     fittingFig = plt.figure()
-    title = 'sgd: rate=%.3f, maxLoop=%d, epsilon=%.3f \n time: %ds'%(rate,maxLoop,epsilon,timeConsumed)
+    title = 'sgd: rate=%.2f, maxLoop=%d, epsilon=%.3f \n time: %ds'%(rate,maxLoop,epsilon,timeConsumed)
     ax = fittingFig.add_subplot(111, title=title)
     trainingSet = ax.scatter(X[:, 1].flatten().A[0], y[:,0].flatten().A[0])
 
@@ -242,7 +291,7 @@ if __name__ == "__main__":
     plt.legend([trainingSet, fittingLine], ['Training Set', 'Linear Regression'])
     plt.show()
 
-    # 打印误差曲线
+    # 绘制误差曲线
     errorsFig = plt.figure()
     ax = errorsFig.add_subplot(111)
     ax.yaxis.set_major_formatter(mtick.FormatStrFormatter('%.4f'))
@@ -252,6 +301,48 @@ if __name__ == "__main__":
     ax.set_ylabel('Cost J')
 
     plt.show()
+
+    # 绘制能量下降曲面
+    size = 100
+    theta0Vals = np.linspace(-10,10, size)
+    theta1Vals = np.linspace(-2, 4, size)
+    JVals = np.zeros((size, size))
+    for i in range(size):
+        for j in range(size):
+            col = np.matrix([[theta0Vals[i]], [theta1Vals[j]]])
+            JVals[i,j] = regression.J(col, X, y)
+
+    theta0Vals, theta1Vals = np.meshgrid(theta0Vals, theta1Vals)
+    JVals = JVals.T
+    contourSurf = plt.figure()
+    ax = contourSurf.gca(projection='3d')
+
+    ax.plot_surface(theta0Vals, theta1Vals, JVals,  rstride=8, cstride=8, alpha=0.3,
+                cmap=cm.rainbow, linewidth=0, antialiased=False)
+    ax.plot(thetas[0], thetas[1], 'rx')
+    ax.set_xlabel(r'$\theta_0$')
+    ax.set_ylabel(r'$\theta_1$')
+    ax.set_zlabel(r'$J(\theta)$')
+
+    plt.show()
+
+    # 绘制能量轮廓
+    contourFig = plt.figure()
+    ax = contourFig.add_subplot(111)
+    ax.set_xlabel(r'$\theta_0$')
+    ax.set_ylabel(r'$\theta_1$')
+
+    CS = ax.contour(theta0Vals, theta1Vals, JVals, np.logspace(-2,3,20))
+    plt.clabel(CS, inline=1, fontsize=10)
+
+    # 绘制最优解
+    ax.plot(theta[0,0], theta[1,0], 'rx', markersize=10, linewidth=2)
+
+    # 绘制梯度下降过程
+    ax.plot(thetas[0], thetas[1], 'r', linewidth=1)
+
+    plt.show()
+
 ```
 
 __拟合状况__：
@@ -259,4 +350,5 @@ __拟合状况__：
 
 __误差随迭代次数的关系__：
 ![sgd_errors](../attachments/sgd_errors.png)
+
 在学习率为$$0.01$$时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本数据足够小，二是其自身很难通过并行计算去优化速度。
