--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -159,6 +159,8 @@ def sgd(rate, maxLoop, epsilon, X, y):
 ```python
 # coding: utf-8
 import regression
+from matplotlib import cm
+from mpl_toolkits.mplot3d import axes3d
 import matplotlib.pyplot as plt
 import matplotlib.ticker as mtick
 import numpy as np
@@ -170,13 +172,14 @@ if __name__ == "__main__":
     X = np.concatenate((np.ones((m,1)), X), axis=1)
 
     rate = 0.01
-    maxLoop = 1000
-    epsilon = 1
+    maxLoop = 1500
+    epsilon =0.01
 
     result, timeConsumed = regression.bgd(rate, maxLoop, epsilon, X, y)
-    theta,errors = result
 
-    # 打印拟合曲线
+    theta, errors, thetas = result
+
+    # 绘制拟合曲线
     fittingFig = plt.figure()
     title = 'bgd: rate=%.2f, maxLoop=%d, epsilon=%.3f \n time: %ds'%(rate,maxLoop,epsilon,timeConsumed)
     ax = fittingFig.add_subplot(111, title=title)
@@ -193,7 +196,7 @@ if __name__ == "__main__":
     plt.legend([trainingSet, fittingLine], ['Training Set', 'Linear Regression'])
     plt.show()
 
-    # 打印误差曲线
+    # 绘制误差曲线
     errorsFig = plt.figure()
     ax = errorsFig.add_subplot(111)
     ax.yaxis.set_major_formatter(mtick.FormatStrFormatter('%.4f'))
@@ -203,6 +206,49 @@ if __name__ == "__main__":
     ax.set_ylabel('Cost J')
 
     plt.show()
+
+    # 绘制能量下降曲面
+    size = 100
+    theta0Vals = np.linspace(-10,10, size)
+    theta1Vals = np.linspace(-2, 4, size)
+    JVals = np.zeros((size, size))
+    for i in range(size):
+        for j in range(size):
+            col = np.matrix([[theta0Vals[i]], [theta1Vals[j]]])
+            JVals[i,j] = regression.J(col, X, y)
+
+    theta0Vals, theta1Vals = np.meshgrid(theta0Vals, theta1Vals)
+    JVals = JVals.T
+    contourSurf = plt.figure()
+    ax = contourSurf.gca(projection='3d')
+
+    ax.plot_surface(theta0Vals, theta1Vals, JVals,  rstride=2, cstride=2, alpha=0.3,
+                cmap=cm.rainbow, linewidth=0, antialiased=False)
+    ax.plot(thetas[0], thetas[1], 'rx')
+    ax.set_xlabel(r'$\theta_0$')
+    ax.set_ylabel(r'$\theta_1$')
+    ax.set_zlabel(r'$J(\theta)$')
+
+    plt.show()
+
+    # 绘制能量轮廓
+    contourFig = plt.figure()
+    ax = contourFig.add_subplot(111)
+    ax.set_xlabel(r'$\theta_0$')
+    ax.set_ylabel(r'$\theta_1$')
+
+    CS = ax.contour(theta0Vals, theta1Vals, JVals, np.logspace(-2,3,20))
+    plt.clabel(CS, inline=1, fontsize=10)
+
+    # 绘制最优解
+    ax.plot(theta[0,0], theta[1,0], 'rx', markersize=10, linewidth=2)
+
+    # 绘制梯度下降过程
+    ax.plot(thetas[0], thetas[1], 'rx', markersize=3, linewidth=1)
+    ax.plot(thetas[0], thetas[1], 'r-')
+
+    plt.show()
+
 ```
 
 __拟合状况__：
