--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -258,6 +258,11 @@ __拟合状况__：
 
 __误差随迭代次数的关系__：
 ![bgd_errors](../attachments/bgd_errors.png)
+__误差函数的下降曲面__：
+![bgd_能量函数](../attachments/bgd_能量函数.png)
+
+__梯度下架过程__：
+![bgd梯度下降过程](../attachments/bgd梯度下降过程.png)
 
 ### sgd测试
 ```python
