--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -252,7 +252,7 @@ if __name__ == "__main__":
 ```
 
 __拟合状况__：
-![bgd](../attachments/bgd.png)
+![bgd](../attachments/bgd拟合.png)
 
 可以看到，bgd运行的并不慢，这是因为在regression程序中，我们采用了__向量形式__计算$$\theta$$，计算机会通过__并行计算__的手段来优化速度。
 
