--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -360,7 +360,7 @@ if __name__ == "__main__":
 ```
 
 __拟合状况__：
-![sgd](../attachments/sgd.png)
+![sgd](../attachments/sgd拟合.png)
 
 __误差随迭代次数的关系__：
 ![sgd_errors](../attachments/sgd_errors.png)
@@ -368,4 +368,4 @@ __误差随迭代次数的关系__：
 __梯度下降过程__：
 ![sgd梯度下降过程](../attachments/sgd梯度下降过程.png)
 
-在学习率为$$0.01$$时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本数据足够小，二是其自身很难通过并行计算去优化速度。
+在学习率为$$0.01$$时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本容量不大，二是其自身很难通过并行计算去优化速度。
