--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -1,4 +1,4 @@
-# 程序示例，多项式回归
+y# 程序示例，多项式回归
 下面，我们有一组温度（temperature）和实验产出量（yield）训练样本，该数据来源于博客[Polynomial Regression Examples](https://onlinecourses.science.psu.edu/stat501/node/325)：
 
 |temperature|yield|
@@ -130,7 +130,7 @@ if __name__ == "__main__":
     fittingLine, = ax.plot(xx, yHat, color='g')
 
     ax.set_xlabel('Yield')
-    ax.set_ylabel('Temperature')
+    ax.set_ylabel('temperature')
 
     plt.legend([trainingSet, fittingLine], ['Training Set', 'Polynomial Regression'])
     plt.show()
