--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -1,4 +1,4 @@
-y# 程序示例，多项式回归
+# 程序示例，多项式回归
 下面，我们有一组温度（temperature）和实验产出量（yield）训练样本，该数据来源于博客[Polynomial Regression Examples](https://onlinecourses.science.psu.edu/stat501/node/325)：
 
 |temperature|yield|
@@ -87,6 +87,10 @@ $$
 h(\theta) = \theta_0+\theta_1x+\theta_2x^2
 
 $$
+因为$$x$$与$$x^2$$数值差异较大，所以我们会先做一次特征标准化，将各个特征缩放到$$[-1,1]$$区间
+$$
+z=\frac{x-\mu}{\delta}
+$$
 
 ```python
 # coding: utf-8
@@ -147,3 +151,5 @@ if __name__ == "__main__":
     plt.show()
 ```
 
+得到的拟合曲线更加准确：
+![]temperature_polynomial](../attachments/temperature_polynomial.png)
