--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -152,4 +152,4 @@ if __name__ == "__main__":
 ```
 
 得到的拟合曲线更加准确：
-![]temperature_polynomial](../attachments/temperature_polynomial.png)
+![temperature_polynomial](../attachments/temperature_polynomial.png)
