--- a/线性回归/articles/特征缩放.md
+++ b/线性回归/articles/特征缩放.md
@@ -44,6 +44,56 @@ $$
 
 ![缩放了特征的代价函数](../attachments/缩放了特征的代价函数.png)
 
+## 实现
+在__regression.py__中，我们添加了__Standardization__和__Normalization__的实现：
+
+```python
+# linear_regression/regression.py
+
+# ...
+def standardize(X):
+    """特征标准化处理
+
+    Args:
+        X: 样本集
+    Returns:
+        标准后的样本集
+    """
+    m, n = X.shape
+    # 归一化每一个特征
+    for j in range(n):
+        features = X[:,j]
+        meanVal = features.mean(axis=0)
+        std = features.std(axis=0)
+        if std != 0:
+            X[:, j] = (features-meanVal)/std
+        else
+            X[:, j] = 0
+    return X
+
+def normalize(X):
+    """特征归一化处理
+
+    Args:
+        X: 样本集
+    Returns:
+        归一化后的样本集
+    """
+    m, n = X.shape
+    # 归一化每一个特征
+    for j in range(n):
+        features = X[:,j]
+        minVal = features.min(axis=0)
+        maxVal = features.max(axis=0)
+        diff = maxVal - minVal
+        if diff != 0:
+           X[:,j] = (features-minVal)/diff
+        else:
+           X[:,j] = 0
+    return X
+# ...
+```
+
 ## 参考文献
 - [About Feature Scaling and Normalization](http://sebastianraschka.com/Articles/2014_about_feature_scaling.html#numpy)
 - [Wiki--Feature scaling](https://en.wikipedia.org/wiki/Feature_scaling)
