--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -103,9 +103,10 @@ if __name__ == "__main__":
     srcX, y = regression.loadDataSet('data/temperature.txt');
 
     m,n = srcX.shape
-    srcX = np.concatenate((np.ones((m,1)), srcX[:, 0], np.power(srcX[:, 0],2)), axis=1)
+    srcX = np.concatenate((srcX[:, 0], np.power(srcX[:, 0],2)), axis=1)
     # 特征缩放
     X = regression.standardize(srcX.copy())
+    X = np.concatenate((np.ones((m,1)), X), axis=1)
 
     rate = 0.1
     maxLoop = 1000
