--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -93,6 +93,7 @@ z=\frac{x-\mu}{\delta}
 $$
 
 ```python
+# linear_regression/test/temperature_polynomial.py
 # coding: utf-8
 import regression
 import matplotlib.pyplot as plt
