--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -27,6 +27,7 @@ h(\theta) = \theta_0+\theta_1x
 $$
 
 ```python
+# linear_regression/test/temperature_normal.py
 # coding: utf-8
 import regression
 from matplotlib import cm
