--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -3,6 +3,7 @@
 下面我们将撰写程序，其中提供了__批量梯度下降__和__随机梯度下降__两种学习策略来求解回归方程：
 
 ```python
+# linear_regression/test/bgd.py
 # coding: utf-8
 import numpy as np
 import matplotlib as plt
