--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -268,6 +268,7 @@ __梯度下架过程__：
 
 ### sgd测试
 ```python
+# linear_regression/test/sgd.py
 # coding: utf-8
 import regression
 from matplotlib import cm
