--- a/线性回归/articles/欠拟合与过拟合.md
+++ b/线性回归/articles/欠拟合与过拟合.md
@@ -1,2 +1,12 @@
 # 欠拟合与过拟合
+## 问题
+在上一节中，我们利用多项式回归获得更加准确的拟合曲线，从拟合欠佳到拟合合适。然而，又时有可能发生过度拟合，借此，引出两个概念：
+- __欠拟合（underfitting）__：拟合程度不高，数据距离拟合曲线较远，如下左图所示。
 
+- __过拟合（overfitting）__：过度拟合，貌似拟合几乎每一个数据，但是丢失了信息规律，如下右图所示，房价随着房屋面积的增加反而降低了。
+
+![欠拟合与过拟合](../attachments/欠拟合与过拟合.png)
+
+## 解决--局部加权线性回归（LWR）
+为了解决欠拟合和过拟合问题，引入了局部加权线性回归（Locally Weight linear Regression）。在一般的线性回归算法中，对于某个输入向量$$x$$，我们这样预测输出$$y$$：
+1. 修正$$\theta$$来最小化$$\sum_i(y_i-\theta^Tx^{(i)})^2$$
