--- a/线性回归/articles/欠拟合与过拟合.md
+++ b/线性回归/articles/欠拟合与过拟合.md
@@ -8,5 +8,20 @@
 ![欠拟合与过拟合](../attachments/欠拟合与过拟合.png)
 
 ## 解决--局部加权线性回归（LWR）
-为了解决欠拟合和过拟合问题，引入了局部加权线性回归（Locally Weight linear Regression）。在一般的线性回归算法中，对于某个输入向量$$x$$，我们这样预测输出$$y$$：
+为了解决欠拟合和过拟合问题，引入了__局部加权线性回归（Locally Weight linear Regression）__。在一般的线性回归算法中，对于某个输入向量$$x$$，我们这样预测输出$$y$$：
 1. 修正$$\theta$$来最小化$$\sum_i(y_i-\theta^Tx^{(i)})^2$$
+2. 进行预测：$$\theta^Tx$$
+
+而在局部加权线性回归中：
+1. 修正$$\theta$$来最小化$$\sum_iw^{(i)}(y_i-\theta^Tx^{(i)})^2$$
+2. 进行预测：$$\theta^Tx$$
+
+__LWR__赋予了$$x^{(i)}$$周围点不同的权值，距离$$x^{(i)}$$越近，权重越高。通常，$$w^{(i)}$$定义如下，服从高斯分布，在$$x$$周围呈指数型衰减：
+$$
+
+w^{(i)} = e^{-\frac{(x^{(i)}-x)^2}{2\tau^2}}
+
+$$
+![权值分布](../attachments/局部加权线性回归.jpg)
+
+
