--- a/线性回归/articles/欠拟合与过拟合.md
+++ b/线性回归/articles/欠拟合与过拟合.md
@@ -12,11 +12,15 @@
 1. 修正$$\theta$$来最小化$$\sum_i(y_i-\theta^Tx^{(i)})^2$$
 2. 进行预测：$$\theta^Tx$$
 
+可以看到，我们在计算误差函数式，
+
 而在局部加权线性回归中：
 1. 修正$$\theta$$来最小化$$\sum_iw^{(i)}(y_i-\theta^Tx^{(i)})^2$$
 2. 进行预测：$$\theta^Tx$$
 
-__LWR__赋予了$$x^{(i)}$$周围点不同的权值，距离$$x^{(i)}$$越近，权重越高。通常，$$w^{(i)}$$定义如下，服从高斯分布，在$$x$$周围呈指数型衰减：
+__LWR__赋予了$$x^{(i)}$$周围点不同的权值，距离$$x^{(i)}$$越近，权重越高。
+
+通常，$$w^{(i)}$$定义如下，服从高斯分布，在$$x$$周围呈指数型衰减：
 $$
 
 w^{(i)} = e^{-\frac{(x^{(i)}-x)^2}{2\tau^2}}
