--- a/线性回归/articles/欠拟合与过拟合.md
+++ b/线性回归/articles/欠拟合与过拟合.md
@@ -12,13 +12,11 @@
 1. 修正$$\theta$$来最小化$$\sum_i(y_i-\theta^Tx^{(i)})^2$$
 2. 进行预测：$$\theta^Tx$$
 
-可以看到，我们在计算误差函数式，
-
 而在局部加权线性回归中：
 1. 修正$$\theta$$来最小化$$\sum_iw^{(i)}(y_i-\theta^Tx^{(i)})^2$$
 2. 进行预测：$$\theta^Tx$$
 
-__LWR__赋予了$$x^{(i)}$$周围点不同的权值，距离$$x^{(i)}$$越近，权重越高。
+在__LWR__中，我们对一个输入$$x$$进行预测时，赋予了$$x$$周围点不同的权值，距离$$x$$越近，权重越高。整个学习过程中误差将会取决于$$x$$周围的误差，而不是整体的误差，这也就是__局部__一词的由来。
 
 通常，$$w^{(i)}$$定义如下，服从高斯分布，在$$x$$周围呈指数型衰减：
 $$
@@ -28,4 +26,4 @@ w^{(i)} = e^{-\frac{(x^{(i)}-x)^2}{2\tau^2}}
 $$
 ![权值分布](../attachments/局部加权线性回归.jpg)
 
-
+另外，LWR属于非参数（non-parametric）学习算法，所谓的非参数学习算法指的是没有明确的参数（比如上述的$$theta$$取决于当前要预测的$$x$$），每进行一次预测，就需要重新进行训练。而一般的线性回归属于参数（parametric）学习算法，参数在训练后将不再改变。
