--- a/线性回归/articles/欠拟合与过拟合.md
+++ b/线性回归/articles/欠拟合与过拟合.md
@@ -8,7 +8,7 @@
 ![欠拟合与过拟合](../attachments/欠拟合与过拟合.png)
 
 ## 解决--局部加权线性回归（LWR）
-为了解决欠拟合和过拟合问题，引入了__局部加权线性回归（Locally Weight linear Regression）__。在一般的线性回归算法中，对于某个输入向量$$x$$，我们这样预测输出$$y$$：
+为了解决欠拟合和过拟合问题，引入了__局部加权线性回归（Locally Weight Regression）__。在一般的线性回归算法中，对于某个输入向量$$x$$，我们这样预测输出$$y$$：
 1. 修正$$\theta$$来最小化$$\sum_i(y_i-\theta^Tx^{(i)})^2$$
 2. 进行预测：$$\theta^Tx$$
 
@@ -24,6 +24,8 @@ $$
 w^{(i)} = e^{-\frac{(x^{(i)}-x)^2}{2\tau^2}}
 
 $$
+
+其中，$$\tau$$值越小，则靠近预测点的权重越大，而远离预测点的权重越小。
 ![权值分布](../attachments/局部加权线性回归.jpg)
 
 另外，LWR属于非参数（non-parametric）学习算法，所谓的非参数学习算法指的是没有明确的参数（比如上述的$$theta$$取决于当前要预测的$$x$$），每进行一次预测，就需要重新进行训练。而一般的线性回归属于参数（parametric）学习算法，参数在训练后将不再改变。
