--- a/K-Means/articles/无监督学习.md
+++ b/K-Means/articles/无监督学习.md
@@ -1,1 +1,16 @@
-##
+# 无监督学习
+从本节开始，将正式进入到无监督学习（Unsupervised Learning）部分。**无监督学习**，顾名思义，就是不受监督的学习，一种**自由**的学习方式。该学习方式不需要先验知识进行指导，而是不断地自我认知，自我巩固，最后进行自我归纳，在机器学习中，无监督学习可以被简单理解为**不为训练集提供对应的类别标识（label）**，其与有监督学习的对比如下：
+
+有监督学习（Supervised Learning）下的训练集：
+
+$$ (x^{(1)}, y^{(1)}), (x^{(2)}, y^{2}) $$
+
+无监督学习（Unsupervised Learning）下的训练集：
+
+$$(x^{(1)}), (x^{(2)}), (x^{(3)})$$
+
+## 聚类
+
+在有监督学习中，我们把对样本进行分类的过程称之为**分类（Classification）**，而在无监督学习中，我们将物体被划分到不同集合的过程称之为**聚类（Clustering）**。**聚**这个动词十分精确，他传神地描绘了各个物体**自主地**想属于自己的集合靠拢的过程。
+
+在聚类中，我们把物体所在的集合称之为**蔟（cluster）**。
