--- a/K-Means/articles/无监督学习.md
+++ b/K-Means/articles/无监督学习.md
@@ -13,4 +13,4 @@ $$(x^{(1)}), (x^{(2)}), (x^{(3)})$$
 
 在有监督学习中，我们把对样本进行分类的过程称之为**分类（Classification）**，而在无监督学习中，我们将物体被划分到不同集合的过程称之为**聚类（Clustering）**。**聚**这个动词十分精确，他传神地描绘了各个物体**自主地**想属于自己的集合靠拢的过程。
 
-在聚类中，我们把物体所在的集合称之为**蔟（cluster）**。
+在聚类中，我们把物体所在的集合称之为**簇（cluster）**。
