--- a/KMeans/articles/如何确定聚类数.md
+++ b/KMeans/articles/如何确定聚类数.md
@@ -8,7 +8,7 @@
 
 但是，也存在一种称之为**肘部法则（Elbow Method）**的方法来选定适当的K值：
 
-![肘部法则](../attachmengs/肘部法则.png)
+![肘部法则](../attachments/肘部法则.png)
 
 上图曲线类似于人的手肘，“肘关节”部分对应的$$K$$值就是最恰当的$$K$$值，但是并不是所有代价函数曲线都存在明显的“肘关节”，例如下面的曲线：
 
