--- a/线性回归/articles/回归问题.md
+++ b/线性回归/articles/回归问题.md
@@ -35,14 +35,14 @@ $$
 ### 误差评估
 之前我们说到，需要某个__手段__来评估我们的学习效果，即评估各个真实值$$y_i$$与预测值$$h_\theta(x^{(i)})$$之间的误差。最常见的，我们通过*最小均方（Least Mean Square）*来计算误差：
 $$
- 
+
 J(\theta)=\frac{1}{2m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y_i]^2 \quad {m为样本数}
 
 $$
 该函数的矩阵表达为：
 $$
 
-J_\theta=\frac{1}{2m}(X\theta-y)^T(X\theta-y)
+J(\theta)=\frac{1}{2m}(X\theta-y)^T(X\theta-y)
 
 $$
 误差评估的函数在机器学习中也称为__代价函数（cost function）__。
@@ -78,7 +78,7 @@ $$
 $$
 其中，代价函数为：
 $$
- 
+
 J(\theta)=\frac{1}{2m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y_i]^2
 
 $$
@@ -95,8 +95,7 @@ $$
 
 可以看到，在随机梯度下降法中，每次更新$$\theta_j$$只需要一个样本：$$(x^{(i)}, y_i)$$。即便在样本集容量巨大时，我们也很可能迅速获得最优解，SGD在性能上的优势明显。
 
-|手段|概括|优点|缺点|
-|----|----|----|----|
-|批量梯度下降法|尽可能减小训练样本的__总的__预测代价|能够获得最优解，即最高的预测精度，支持并行计算|样本容量较大时，性能显著下降|
-|随机梯度下降法|尽可能的减小每个训练样本的预测代价|训练速度快|并不一定能获得全局最优，经常出现抖动和噪音，且不能通过并行计算优化|
-
+| 手段           | 概括                                 | 优点                                           | 缺点                                                               |
+|:---------------|:-------------------------------------|:-----------------------------------------------|:-------------------------------------------------------------------|
+| 批量梯度下降法 | 尽可能减小训练样本的__总的__预测代价 | 能够获得最优解，即最高的预测精度，支持并行计算 | 样本容量较大时，性能显著下降                                       |
+| 随机梯度下降法 | 尽可能的减小每个训练样本的预测代价   | 训练速度快                                     | 并不一定能获得全局最优，经常出现抖动和噪音，且不能通过并行计算优化 |
