--- a/线性回归/codes/局部加权线性回归.md
+++ b/线性回归/codes/局部加权线性回归.md
@@ -2,9 +2,10 @@
 现在，我们在regression.py中又添加了`JLwr()`方法用于计算预测代价，以及`lwr()`方法用于完成局部加权线性回归：
 
 ```python
-# regression.py
+# coding: utf-8
+# linear_regression/regression.py
 
-# ....
+# ...
 
 def JLwr(theta, X, y, x, c):
     """局部加权线性回归的代价函数计算式
@@ -70,10 +71,9 @@ def lwr(rate, maxLoop, epsilon, X, y, x, c=1):
 ```
 
 __测试程序__：
-```
-# test/lwr.py
-
+```python
 # coding: utf-8
+# linear_regression/test_lwr.py
 import regression
 import matplotlib.pyplot as plt
 import matplotlib.ticker as mtick
