--- a/逻辑回归/articles/多分类问题.md
+++ b/逻辑回归/articles/多分类问题.md
@@ -3,9 +3,8 @@
 
 通常采用**One-vs-All**，或者说是**One-vs-the Rest**方法来实现多分类，其将**多分类问题**转化为了**多次二分类**问题，具体过程如下：
 
-1. 轮流选中某一类型$$i$$，将其视为正类型（positive class），即“1”分类，其余剩下样本都看做是负类型（negative class），即“0”分类。
-
-2. 获得$$i$$类型的逻辑回归分类器$$h_\theta^{(i)}(x)$$,即我们的每一步都确定了一个新的类型（获得了该类型与其他类型的决策边界）。
+1. 轮流选中某一类型 $$i$$ ，将其视为正样本，即“1”分类，剩下样本都看做是负样本，即“0”分类。
+2. 训练回归模型得到参数$$\theta^{(1)}, \theta^{(2)}, ..., \theta^{(K)}$$ ，即总共获得了$$K-1$$个决策边界。
 
 ![多分类问题](../attachments/多分类问题.png)
 
