--- a/SVM/articles/核函数.md
+++ b/SVM/articles/核函数.md
@@ -94,10 +94,10 @@ $$
 
 $$
 
-f_1^{(i)}=sim(x^{(i)},l^{(i)}) \\
-f_2^{(i)}=sim(x^{(i)},l^{(i)}) \\
+f_1^{(i)}=sim(x^{(i)},l^{(1)}) \\
+f_2^{(i)}=sim(x^{(i)},l^{(2)}) \\
 \vdots \\
-f_m^{(i)}=sim(x^{(i)},l^{(i)}) \\
+f_m^{(i)}=sim(x^{(i)},l^{(3)}) \\
 
 
 $$
