--- a/KMeans/articles/优化.md
+++ b/KMeans/articles/优化.md
@@ -1,13 +1,15 @@
-# 优化
+优化
+==========
 
-和其他机器学习算法一样，K-Means也要**评估**并且**最小化**聚类代价，在引入K-Means的代价函数之前，先引入如下定义：
+和其他机器学习算法一样，K-Means 也要**评估**并且**最小化**聚类代价，在引入 K-Means 的代价函数之前，先引入如下定义：
 $$
 
-\mu_c(i)=样本x^{(i)}被分配到的聚类中心
+\mu_c(i)= \mbox{样本 $x^{(i)}$ 被分配到的聚类中心}
 
 $$
 
 引入代价函数：
+
 $$
 
 J(c^{(1)},c^{(2)},...,c^{(m)};\mu_1,\mu_2,...,\mu_k)=\frac{1}{m}\sum_{i=1}^m||x^{(i)}-\mu_c(i)||^2
@@ -16,16 +18,18 @@ $$
 
 J也被称为**失真代价函数（Distortion Cost Function）**。
 
-实际上，K-Means的两步已经完成了最小化代价函数的过程：
+实际上，K-Means 的两步已经完成了最小化代价函数的过程：
 
 **样本分配时**：
 
-我们固定住了$$(\mu_1,\mu_2,...,\mu_k)$$，而关于$$(c^{(1)},c^{(2)},...,c^{(m)})$$最小化了$$J$$。
+我们固定住了 $$(\mu_1,\mu_2,...,\mu_k)$$，而关于 $$(c^{(1)},c^{(2)},...,c^{(m)})$$ 最小化了 $$J$$。
 
 **中心移动时**：
 
-我们再关于$$(\mu_1,\mu_2,...,\mu_k)$$最小化了$$J$$。
+我们再关于 $$(\mu_1,\mu_2,...,\mu_k)$$ 最小化了 $$J$$。
 
-由于K-Means每次迭代过程都在最小化$$J$$，所以下面的代价函数变化曲线不会出现：
+由于 K-Means 每次迭代过程都在最小化 $$J$$，所以下面的代价函数变化曲线不会出现：
 
-![代价函数曲线](../attachments/代价函数曲线.png)
+<div style="text-align:center">
+<img src="../attachments/代价函数曲线.png" width="500"></img>
+</div>
