--- a/KMeans/articles/无监督学习.md
+++ b/KMeans/articles/无监督学习.md
@@ -1,4 +1,6 @@
-# 无监督学习
+无监督学习
+==============
+
 从本节开始，将正式进入到无监督学习（Unsupervised Learning）部分。**无监督学习**，顾名思义，就是不受监督的学习，一种**自由**的学习方式。该学习方式不需要先验知识进行指导，而是不断地自我认知，自我巩固，最后进行自我归纳，在机器学习中，无监督学习可以被简单理解为**不为训练集提供对应的类别标识（label）**，其与有监督学习的对比如下：
 
 有监督学习（Supervised Learning）下的训练集：
