--- a/线性回归/codes/局部加权线性回归.md
+++ b/线性回归/codes/局部加权线性回归.md
@@ -1,5 +1,7 @@
-# 程序示例--局部加权线性回归
-现在，我们在regression.py中又添加了`JLwr()`方法用于计算预测代价，以及`lwr()`方法用于完成局部加权线性回归：
+程序示例--局部加权线性回归
+==============
+
+现在，我们在 `regression.py` 中又添加了 `JLwr()` 方法用于计算预测代价，以及 `lwr()` 方法用于完成局部加权线性回归：
 
 ```python
 # coding: utf-8
@@ -70,7 +72,9 @@ def lwr(rate, maxLoop, epsilon, X, y, x, c=1):
 # ...
 ```
 
-__测试程序__：
+测试
+----------
+
 ```python
 # coding: utf-8
 # linear_regression/test_lwr.py
@@ -144,6 +148,8 @@ if __name__ == "__main__":
     plt.show()
 ```
 
-在测试程序中，我们分别对$$\tau$$取值$$0.1$$和$$1$$，得到了不同的拟合曲线：、
+在测试程序中，我们分别对 $$\tau$$ 取值 $$0.1$$ 和 $$1$$，得到了不同的拟合曲线：
 
-![lwr](../attachments/lwr.png)
+<div style="text-align:center">
+<img src="../attachments/lwr.png" width="800"></img>
+</div>
