--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -1,6 +1,10 @@
-# 程序示例--梯度下降
-## 回归程序
-下面我们将撰写程序，其中提供了__批量梯度下降__和__随机梯度下降__两种学习策略来求解回归方程：
+程序示例--梯度下降
+=============
+
+回归程序
+-------------
+
+下面我们将撰写程序，其中提供了**批量梯度下降**和**随机梯度下降**两种学习策略来求解回归方程：
 
 ```python
 # coding: utf-8
@@ -154,9 +158,11 @@ def sgd(rate, maxLoop, epsilon, X, y):
 
 > 代码结合注释应该能看懂，借助于Numpy，只是复现了课上的公式。
 
-## 测试程序
+测试程序
+-----------
 
 ### bgd测试程序
+
 ```python
 # coding: utf-8
 # linear_regression/test_bgd.py
@@ -167,7 +173,7 @@ import matplotlib.pyplot as plt
 import matplotlib.ticker as mtick
 import numpy as np
 
-if __name__ == "__main__":
+if **name** == "**main**":
     X, y = regression.loadDataSet('data/ex1.txt');
 
     m,n = X.shape
@@ -253,20 +259,34 @@ if __name__ == "__main__":
 
 ```
 
-__拟合状况__：
-![bgd](../attachments/bgd拟合.png)
+**拟合状况**：
 
-可以看到，bgd运行的并不慢，这是因为在regression程序中，我们采用了__向量形式__计算$$\theta$$，计算机会通过__并行计算__的手段来优化速度。
+<div style="text-align: center">
+<img src="../attachments/bgd拟合.png" width="500"></img>
+</div>
 
-__误差随迭代次数的关系__：
-![bgd_errors](../attachments/bgd_errors.png)
-__误差函数的下降曲面__：
-![bgd能量函数](../attachments/bgd能量函数.png)
+可以看到，bgd 运行的并不慢，这是因为在 regression 程序中，我们采用了**向量形式**计算 $$\theta$$，计算机会通过**并行计算**的手段来优化速度。
 
-__梯度下架过程__：
-![bgd梯度下降过程](../attachments/bgd梯度下降过程.png)
+**误差随迭代次数的关系**：
+
+<div style="text-align: center">
+<img src="../attachments/bgd_errors.png" width="500"></img>
+</div>
+
+**误差函数的下降曲面**：
+
+<div style="text-align: center">
+<img src="../attachments/bgd能量函数.png" width="500"></img>
+</div>
+
+**梯度下架过程**：
+
+<div style="text-align: center">
+<img src="../attachments/bgd梯度下降过程.png" width="500"></img>
+</div>
 
 ### sgd测试
+
 ```python
 # coding: utf-8
 # linear_regression/test_sgd.py
@@ -277,7 +297,7 @@ import matplotlib.pyplot as plt
 import matplotlib.ticker as mtick
 import numpy as np
 
-if __name__ == "__main__":
+if **name** == "**main**":
     X, y = regression.loadDataSet('data/ex1.txt');
 
     m,n = X.shape
@@ -362,13 +382,22 @@ if __name__ == "__main__":
 
 ```
 
-__拟合状况__：
-![sgd](../attachments/sgd拟合.png)
+**拟合状况**：
 
-__误差随迭代次数的关系__：
-![sgd_errors](../attachments/sgd_errors.png)
+<div style="text-align: center">
+<img src="../attachments/sgd拟合.png" width="500"></img>
+</div>
 
-__梯度下降过程__：
-![sgd梯度下降过程](../attachments/sgd梯度下降过程.png)
+**误差随迭代次数的关系**：
 
-在学习率为$$0.01$$时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本容量不大，二是其自身很难通过并行计算去优化速度。
+<div style="text-align: center">
+<img src="../attachments/sgd_errors.png" width="500"></img>
+</div>
+
+**梯度下降过程**：
+
+<div style="text-align: center">
+<img src="../attachments/sgd梯度下降过程.png" width="500"></img>
+</div>
+
+在学习率为 $$0.01$$ 时，随机梯度下降法出现了非常明显的抖动，同时，随机梯度下降法的速度优势也并未在此得到体现，一是样本容量不大，二是其自身很难通过并行计算去优化速度。
