--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -1,4 +1,6 @@
-# 程序示例--多项式回归
+程序示例--多项式回归
+==============
+
 下面，我们有一组温度（temperature）和实验产出量（yield）训练样本，该数据来源于博客[Polynomial Regression Examples](https://onlinecourses.science.psu.edu/stat501/node/325)：
 
 | temperature | yield |
@@ -20,6 +22,7 @@
 | 100         | 3.0   |
 
 我们先通过如下预测函数进行训练：
+
 $$
 
 h(\theta) = \theta_0+\theta_1x
@@ -80,17 +83,25 @@ if __name__ == "__main__":
 ```
 
 得到的拟合图像为：
-![temparature_normal](../attachments/temperature_normal.png)
 
-接下来，我们使用了__多项式回归__，添加了2阶项：
+<div style="text-align:center">
+<img src="../attachments/temperature_normal.png" width="500"></img>
+</div>
+
+接下来，我们使用了**多项式回归**，添加了 2 阶项：
+
 $$
 
 h(\theta) = \theta_0+\theta_1x+\theta_2x^2
 
 $$
-因为$$x$$与$$x^2$$数值差异较大，所以我们会先做一次特征标准化，将各个特征缩放到$$[-1,1]$$区间
+
+因为 $$x$$ 与 $$x^2$$ 数值差异较大，所以我们会先做一次特征标准化，将各个特征缩放到 $$[-1,1]$$ 区间
+
 $$
+
 z=\frac{x-\mu}{\delta}
+
 $$
 
 ```python
@@ -156,4 +167,7 @@ if __name__ == "__main__":
 ```
 
 得到的拟合曲线更加准确：
-![temperature_polynomial](../attachments/temperature_polynomial.png)
+
+<div style="text-align:center">
+<img src="../attachments/temperature_polynomial.png" width="500"></img>
+</div>
