--- a/逻辑回归/articles/01分类问题.md
+++ b/逻辑回归/articles/01分类问题.md
@@ -1,7 +1,7 @@
-0-1分类问题
+0/1 分类问题
 ============
 
-利用线性回归中的预测函数$$h_\theta (x)$$，我们定义阈值函数来完成0-1分类：
+利用线性回归中的预测函数 $$h_\theta (x)$$，我们定义阈值函数来完成 0/1 分类：
 
 $$
 
@@ -10,7 +10,7 @@ h_\theta (x) \leq 0.5 => y=0
 
 $$
 
-下面两幅图都是完成的线性预测，在图1中，拟合曲线成功的区分了0、1两类，在图2中，如果我们新增了一个输入（右上的**X**所示），此时拟合曲线发生变化，由图1中的紫色线旋转到图2蓝色线，导致本应被视作1类的X被当做了0类。
+下面两幅图都是完成的线性预测，在第一幅图中，拟合曲线成功的区分了 0、1 两类，在第二幅图中，如果我们新增了一个输入（右上的 **X** 所示），此时拟合曲线发生变化，由第一幅图中的紫色线旋转到第二幅图的蓝色线，导致本应被视作 1 类的 X 被当做了 0 类。
 
 另外，传统线性回归预测函数只是预测范围：
 
@@ -21,8 +21,12 @@ h_\theta (x) \lt 0
 
 $$
 
-![线性回归处理01分类1](../attachments/线性回归处理01分类1.png)
+<div style="text-align:center">
+<img src="../attachments/线性回归处理01分类1.png" width="500"></img>
+</div>
 
-![线性回归处理01分类2](../attachments/线性回归处理01分类2.png)
+<div style="text-align:center">
+<img src="../attachments/线性回归处理01分类2.png" width="500"></img>
+</div>
 
-综上，使用线性回归来处理0-1分类问题总是困难重重的，因此，人们定义了逻辑回归来完成0-1分类问题，逻辑一词也代表了**是（1）**和**非（0）**。
+综上，使用线性回归来处理 0/1 分类问题总是困难重重的，因此，人们定义了逻辑回归来完成 0/1 分类问题，逻辑一词也代表了**是（1）**和**非（0）**。
