--- a/逻辑回归/articles/多分类问题.md
+++ b/逻辑回归/articles/多分类问题.md
@@ -1,13 +1,17 @@
 多分类问题
 ============
 
-通常采用**One-vs-All**，或者说是**One-vs-the Rest**方法来实现多分类，其将**多分类问题**转化为了**多次二分类**问题，具体过程如下：
+通常采用 **One-vs-All**，或者说是 **One-vs-the Rest** 方法来实现多分类，其将**多分类问题**转化为了**多次二分类**问题，具体过程如下：
 
-1. 轮流选中某一类型 $$i$$ ，将其视为正样本，即“1”分类，剩下样本都看做是负样本，即“0”分类。
-2. 训练回归模型得到参数$$\theta^{(1)}, \theta^{(2)}, ..., \theta^{(K)}$$ ，即总共获得了$$K-1$$个决策边界。
+1. 轮流选中某一类型 $$i$$ ，将其视为正样本，即 “1” 分类，剩下样本都看做是负样本，即 “0” 分类。
+2. 训练回归模型得到参数$$\theta^{(1)}, \theta^{(2)}, ..., \theta^{(K)}$$ ，即总共获得了 $$K-1$$ 个决策边界。
 
-![多分类问题](../attachments/多分类问题.png)
+<div style="text-align:center">
+<img src="../attachments/多分类问题.png" width="500"></img>
+</div>
 
-假定输入向量$$x$$。则分别计算$$h_\theta^{(i)}(x)$$,因为我们每个$$i$$类型都是视作正类型，即$$ h_\theta^{(i)}(x)$$越趋近于1，$$x$$越接近是第$$i$$类：
+假定输入向量 $$x$$。则分别计算 $$h_\theta^{(i)}(x)$$，因为我们每个 $$i$$ 类型都是视作正类型，即 $$ h_\theta^{(i)}(x)$$ 越趋近于 1，$$x$$ 越接近是第 $$i$$ 类：
 
-![多分类问题h](../attachments/多分类问题h.png)
+<div style="text-align:center">
+<img src="../attachments/多分类问题h.png" width="500"></img>
+</div>
