--- a/逻辑回归/codes/非线性决策边界.md
+++ b/逻辑回归/codes/非线性决策边界.md
@@ -1,7 +1,7 @@
 程序示例--非线性决策边界
 ======================
 
-我们首先对数据进行了多项式拟合，再分别使用$$\lambda=0,\lambda=1,\lambda=100$$的批量梯度下降法（sgd）完成了训练，获得了非线性决策边界：
+我们首先对数据进行了多项式拟合，再分别使用 $$\lambda=0,\lambda=1,\lambda=100$$ 的批量梯度下降法（sgd）完成了训练，获得了非线性决策边界：
 
 ```python
 # coding: utf-8
@@ -58,4 +58,6 @@ if __name__ == "__main__":
 
 程序运行结果如下：
 
-![非线性决策边界演示结果](../attachments/非线性决策边界演示结果.png)
+<div style="text-align: center">
+<img src="../attachments/非线性决策边界演示结果.png" width="100%"></img>
+</div>
