--- a/逻辑回归/codes/线性决策边界.md
+++ b/逻辑回归/codes/线性决策边界.md
@@ -1,11 +1,11 @@
 程序示例--线性决策边界
 ============
 
-在逻辑回归模块`logical_regression.py`中，实现了批量梯度下降法（bgd）以及随机梯度下降法（sgd），同时，支持正规化方程
+在逻辑回归模块 `logical_regression.py` 中，实现了批量梯度下降法（bgd）以及随机梯度下降法（sgd），同时，支持正规化方程
 
 ```python
 # coding: utf-8
-# logical_regression/test_linear_boundry.py
+# logical_regression/logical_regression.py
 import numpy as np
 import matplotlib as plt
 import time
@@ -128,11 +128,12 @@ def gradient(X, y, options):
     return methods[method](theta)
 ```
 
-测试：
+测试
+---------------
 
 ```python
-#!/usr/bin/python
-# -*- coding: UTF-8 -*-
+# coding: utf-8
+# logical_regression/test_linear_boundry.py
 import numpy as np
 import logical_regression as regression
 import matplotlib.pyplot as plt
@@ -204,18 +205,26 @@ if __name__ == "__main__":
         plt.show()
 ```
 
-批量梯度下降法获得的决策边界如下，测试中，迭代次数为**500**次，学习率为**0.1**：
+批量梯度下降法获得的决策边界如下，测试中，迭代次数为 **500** 次，学习率为 **0.1**：
 
-![bgd演示结果](../attachments/bgd演示结果.png)
+<div style="text-align: center">
+<img src="../attachments/bgd演示结果.png" width="500"></img>
+</div>
 
 批量梯度下降法中，代价函数随迭代次数变化状况如下：
 
-![bgd_errors](../attachments/bgd_errors.png)
+<div style="text-align: center">
+<img src="../attachments/bgd_errors.png" width="500"></img>
+</div>
 
-随机梯度下降法获得决策边界如下，测试中，迭代次数为**200**次，学习率为**1**：
+随机梯度下降法获得决策边界如下，测试中，迭代次数为 **200** 次，学习率为 **1** ：
 
-![sgd演示结果](../attachments/sgd演示结果.png)
+<div style="text-align: center">
+<img src="../attachments/sgd演示结果.png" width="500"></img>
+</div>
 
-随机梯度下降法中，参数$$\theta$$的变化情况如下图所示：
+随机梯度下降法中，参数 $$\theta$$ 的变化情况如下图所示：
 
-![sgd_thetas](../attachments/sgd_thetas.png)
+<div style="text-align: center">
+<img src="../attachments/sgd_thetas.png" width="500"></img>
+</div>
